applications: add new port devel/rttr

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5486,6 +5486,7 @@
     SUBDIR += rpm-spec-mode.el
     SUBDIR += rsvndump
     SUBDIR += rth
+    SUBDIR += rttr
     SUBDIR += ruby-bsearch
     SUBDIR += ruby-build
     SUBDIR += ruby-gems
